--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EL POLLO LOCO</title>
+
+    <link rel="icon" href="./img/kopf.png">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+MX:wght@100..400&display=swap" rel="stylesheet">
@@ -68,6 +71,9 @@
         <div id="gameOver" class="gameOver">
             <button class="startButton" onclick="reStart()">RESTART</button>
             <img class="over" src="img/9_intro_outro_screens/game_over/game over.png" alt="">
+        </div>
+    <div class="Bottom-links">
+        <a href="impressum.html" target="_blank">Impressum</a>
         </div>
        <div id="nextLevel" class="nextGamePolloLoco">
           <!-- <button class="next">NEXT LEVEL <p> In the Future</p></button>--> 
