--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
        <div id="nextLevel" class="nextGamePolloLoco">
           <!-- <button class="next">NEXT LEVEL <p> In the Future</p></button>--> 
             <img src="img/9_intro_outro_screens/start/startscreen_1.png" alt="">
-            <button class="neustart" onclick="reStart()">RESTART</button>
+            <button class="neustart" onclick="restartGame()">RESTART</button>
         </div>
         <div class="handy" id="handy">
             <img src="img/phone.png" alt="">
