--- a/index.html
+++ b/index.html
@@ -72,18 +72,21 @@
             <button class="startButton" onclick="reStart()">RESTART</button>
             <img class="over" src="img/9_intro_outro_screens/game_over/game over.png" alt="">
         </div>
-    <div class="Bottom-links">
-        <a href="impressum.html" target="_blank">Impressum</a>
-        </div>
+ 
        <div id="nextLevel" class="nextGamePolloLoco">
           <!-- <button class="next">NEXT LEVEL <p> In the Future</p></button>--> 
             <img src="img/9_intro_outro_screens/start/startscreen_1.png" alt="">
             <button class="neustart" onclick="restartGame()">RESTART</button>
         </div>
+ 
         <div class="handy" id="handy">
             <img src="img/phone.png" alt="">
         </div>
+
     </div>
+                      <div class="Bottom-links">
+        <a href="impressum.html" >Impressum</a>
+        </div>
 </body>
 
 </html>
