--- a/impressum.html
+++ b/impressum.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impressum - El Pollo Loco</title>
+
+    <link rel="icon" href="./img/kopf.png">
     <style>
         body {
             font-family: sans-serif;
