Lost Restart fix

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <img class="start" src="img/9_intro_outro_screens/start/startscreen_2.png" alt="">
         </div>
         <div id="gameOver" class="gameOver">
-            <button class="startButton" onclick="reStart()">RESTART</button>
+            <button class="startButton" onclick="restartGame()">RESTART</button>
             <img class="over" src="img/9_intro_outro_screens/game_over/game over.png" alt="">
         </div>
  
