--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
         <div class="handy" id="handy">
             <img src="img/phone.png" alt="">
         </div>
+        <div id="handy" style="display: none;">
+  <p>Bitte drehe dein Gerät ins Querformat, um zu spielen.</p>
+</div>
 
     </div>
                       <div class="Bottom-links">
